Bug 333169 - Bigger thumbnails option for predefined brushes
Summary: Bigger thumbnails option for predefined brushes
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Victor Wåhlström
URL: http://gifmaker.me/PlayGIFAnimation.p...
Keywords:
Depends on:
Blocks:
 
Reported: 2014-04-07 18:00 UTC by JayJay
Modified: 2016-02-21 01:25 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description JayJay 2014-04-07 18:00:48 UTC
Wish:I often make one preset and then just change the brushtip, like for trees or rocks,etc.

http://gifmaker.me/PlayGIFAnimation.php?folder=2014040704C7lce8BnmBOSJWZE6lTCvu&file=output_Z5fcCD.gif

Having bigger thumbnails makes the selecting easier.

Reproducible: Always
Comment 1 Halla Rempt 2016-01-24 11:20:10 UTC
This is a bug: the widget we use here should support it, like other resource chooser widgets.
Comment 2 JayJay 2016-01-26 09:09:04 UTC
The thumbnails are big enough now, I think
Comment 3 Victor Wåhlström 2016-02-21 01:25:57 UTC
Git commit 1fb8812ba18b65461d85f02b32bc14cedc152254 by Victor Wåhlström.
Committed on 21/02/2016 at 01:20.
Pushed by victorw into branch 'master'.

Fixed broken zoom function in brush chooser widget

M  +1    -0    plugins/paintops/libpaintop/kis_brush_chooser.cpp

http://commits.kde.org/krita/1fb8812ba18b65461d85f02b32bc14cedc152254