Fixed broken zoom function in brush chooser widget

BUG: 333169